<resources>
    <string name="app_name">ConverterCalculator</string>
    <string name="bin">Bin</string>
    <string name="dec">Dec</string>
    <string name="oct">Oct</string>
    <string name="hex">Hex</string>
    <string name="dButton">D</string>
    <string name="fButton">F</string>
    <string name="clearButton">AC</string>
    <string name="eButton">E</string>
    <string name="_7Button">7</string>
    <string name="_8Button">8</string>
    <string name="_9Button">9</string>
    <string name="cButton">C</string>
    <string name="_4Button">4</string>
    <string name="_5Button">5</string>
    <string name="_6Button">6</string>
    <string name="bButton">B</string>
    <string name="_1Button">1</string>
    <string name="_2Button">2</string>
    <string name="_3Button">3</string>
    <string name="aButton">A</string>
    <string name="_0Button">0</string>
</resources>