<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <RadioGroup
       android:id="@+id/radioGroup1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginTop="@dimen/radio_group_margin"
       app:layout_constraintEnd_toEndOf="parent"
       android:orientation="horizontal">
       <RadioButton
           android:id="@+id/binaryFrom"
           android:text="@string/bin"
           android:layout_width="@dimen/width_radio_button"
           android:layout_height="@dimen/height_radio_button"
           android:background="@drawable/radio_buttons"
           style="@style/RadioButtonStyle"
           />
       <RadioButton
           android:id="@+id/decimalFrom"
           android:text="@string/dec"
           android:layout_width="@dimen/width_radio_button"
           android:layout_height="@dimen/height_radio_button"
           android:background="@drawable/radio_buttons"
           style="@style/RadioButtonStyle" />
       <RadioButton
           android:id="@+id/octalFrom"
           android:text="@string/oct"
           android:layout_width="@dimen/width_radio_button"
           android:layout_height="@dimen/height_radio_button"
           style="@style/RadioButtonStyle"
           android:background="@drawable/radio_buttons" />
       <RadioButton
           android:id="@+id/hexadecimalFrom"
           android:text="@string/hex"
           android:layout_width="@dimen/width_radio_button"
           android:layout_height="@dimen/height_radio_button"
           style="@style/RadioButtonStyle"
           android:background="@drawable/radio_buttons" />

   </RadioGroup>

    <ImageView
        android:id="@+id/arrowImage"
        android:src="@drawable/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radioGroup1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/arrowImage"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/binaryTo"
            android:text="@string/bin"
            android:layout_width="@dimen/width_radio_button"
            android:layout_height="@dimen/height_radio_button"
            android:background="@drawable/radio_buttons"
            style="@style/RadioButtonStyle"
            />
        <RadioButton
            android:id="@+id/decimalTo"
            android:text="@string/dec"
            android:layout_width="@dimen/width_radio_button"
            android:layout_height="@dimen/height_radio_button"
            android:background="@drawable/radio_buttons"
            style="@style/RadioButtonStyle" />
        <RadioButton
            android:id="@+id/octalTo"
            android:text="@string/oct"
            android:layout_width="@dimen/width_radio_button"
            android:layout_height="@dimen/height_radio_button"
            style="@style/RadioButtonStyle"
            android:background="@drawable/radio_buttons" />
        <RadioButton
            android:id="@+id/hexadecimalTo"
            android:text="@string/hex"
            android:layout_width="@dimen/width_radio_button"
            android:layout_height="@dimen/height_radio_button"
            style="@style/RadioButtonStyle"
            android:background="@drawable/radio_buttons" />

    </RadioGroup>

    <TextView
        android:id="@+id/numberToConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text=""
        android:maxLength="8"
        android:textColor="@color/number_to_convert_color"
        android:textSize="@dimen/default_text_size"
        android:padding="@dimen/default_text_padding"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup2" />

    <TextView
        android:id="@+id/textResult"
        android:text=""
        android:textColor="@color/text_color"
        android:textSize="@dimen/answer_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/numberToConvert"
        android:fontFamily="@font/inter"
        android:layout_margin="@dimen/small_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias=".75"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clearButton"
        android:onClick="onClickNumber"
        android:text="@string/clearButton"
        android:layout_marginTop="12dp"
        android:layout_width="@dimen/button_number_width"
        android:layout_height="@dimen/button_number_height"
        android:layout_marginStart="@dimen/ac_button_margin"
        style="@style/ButtonNumberStyle"
        android:background="@drawable/number_buttons"
        app:layout_constraintTop_toBottomOf="@id/textResult"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fButton"
        android:onClick="onClickNumber"
        style="@style/ButtonNumberStyle"
        android:layout_width="@dimen/button_number_width"
        android:layout_height="@dimen/button_number_height"
        android:background="@drawable/number_buttons"
        android:text="@string/fButton"
        app:layout_constraintBottom_toBottomOf="@+id/clearButton"
        app:layout_constraintStart_toEndOf="@id/clearButton"
        app:layout_constraintTop_toTopOf="@id/clearButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dButton"
        android:onClick="onClickNumber"
        android:layout_width="@dimen/button_number_width"
        android:layout_height="@dimen/button_number_height"
        style="@style/ButtonNumberStyle"
        android:background="@drawable/number_buttons"
        android:text="@string/dButton"
        app:layout_constraintBottom_toBottomOf="@+id/fButton"
        app:layout_constraintStart_toEndOf="@id/fButton"
        app:layout_constraintTop_toTopOf="@+id/clearButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/eButton"
        android:onClick="onClickNumber"
        style="@style/ButtonNumberStyle"
        android:layout_width="@dimen/button_number_width"
        android:layout_height="@dimen/button_number_height"
        android:background="@drawable/number_buttons"
        android:text="@string/eButton"
        app:layout_constraintBottom_toBottomOf="@+id/dButton"
        app:layout_constraintStart_toEndOf="@id/dButton"
        app:layout_constraintTop_toTopOf="@+id/clearButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button7"
        android:onClick="onClickNumber"
        style="@style/ButtonNumberStyle"
        android:layout_width="@dimen/button_number_width"
        android:layout_height="@dimen/button_number_height"
        android:layout_marginTop="@dimen/margin_top_button"
        android:background="@drawable/number_buttons"
        android:text="@string/_7Button"
        app:layout_constraintEnd_toEndOf="@+id/clearButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/clearButton"
        app:layout_constraintTop_toBottomOf="@+id/clearButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button8"
        android:onClick="onClickNumber"
        style="@style/ButtonNumberStyle"
        android:layout_width="@dimen/button_number_width"
        android:layout_height="@dimen/button_number_height"
        android:layout_marginTop="@dimen/margin_top_button"
        android:background="@drawable/number_buttons"
        android:text="@string/_8Button"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintTop_toTopOf="@+id/button7"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button9"
        android:onClick="onClickNumber"
        style="@style/ButtonNumberStyle"
        android:layout_width="@dimen/button_number_width"
        android:layout_height="@dimen/button_number_height"
        android:layout_marginTop="@dimen/margin_top_button"
        android:background="@drawable/number_buttons"
        android:text="@string/_9Button"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintTop_toTopOf="@+id/button8"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cButton"
        android:onClick="onClickNumber"
        style="@style/ButtonNumberStyle"
        android:layout_width="@dimen/button_number_width"
        android:layout_height="@dimen/button_number_height"
        android:layout_marginTop="@dimen/margin_top_button"
        android:background="@drawable/number_buttons"
        android:text="@string/cButton"
        app:layout_constraintBottom_toBottomOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintTop_toTopOf="@+id/button9"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:onClick="onClickNumber"
        style="@style/ButtonNumberStyle"
        android:layout_width="@dimen/button_number_width"
        android:layout_height="@dimen/button_number_height"
        android:layout_marginTop="@dimen/margin_top_button"
        android:background="@drawable/number_buttons"
        android:text="@string/_4Button"
        app:layout_constraintEnd_toEndOf="@+id/button7"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button5"
        android:onClick="onClickNumber"
        style="@style/ButtonNumberStyle"
        android:layout_width="@dimen/button_number_width"
        android:layout_height="@dimen/button_number_height"
        android:layout_marginTop="@dimen/margin_top_button"
        android:background="@drawable/number_buttons"
        android:text="@string/_5Button"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintTop_toTopOf="@+id/button4"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button6"
        android:onClick="onClickNumber"
        style="@style/ButtonNumberStyle"
        android:layout_width="@dimen/button_number_width"
        android:layout_height="@dimen/button_number_height"
        android:layout_marginTop="@dimen/margin_top_button"
        android:background="@drawable/number_buttons"
        android:text="@string/_6Button"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bButton"
        android:onClick="onClickNumber"
        style="@style/ButtonNumberStyle"
        android:layout_width="@dimen/button_number_width"
        android:layout_height="@dimen/button_number_height"
        android:layout_marginTop="@dimen/margin_top_button"
        android:background="@drawable/number_buttons"
        android:text="@string/bButton"
        app:layout_constraintBottom_toBottomOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintTop_toTopOf="@+id/button6"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button1"
        android:onClick="onClickNumber"
        style="@style/ButtonNumberStyle"
        android:layout_width="@dimen/button_number_width"
        android:layout_height="@dimen/button_number_height"
        android:layout_marginTop="@dimen/margin_top_button"
        android:background="@drawable/number_buttons"
        android:text="@string/_1Button"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/button2"
    android:onClick="onClickNumber"
    style="@style/ButtonNumberStyle"
    android:layout_width="@dimen/button_number_width"
    android:layout_height="@dimen/button_number_height"
    android:layout_marginTop="@dimen/margin_top_button"
    android:background="@drawable/number_buttons"
    android:text="@string/_2Button"
    app:layout_constraintBottom_toBottomOf="@+id/button1"
    app:layout_constraintStart_toEndOf="@id/button1"
    app:layout_constraintTop_toTopOf="@+id/button1"
    app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:onClick="onClickNumber"
        style="@style/ButtonNumberStyle"
        android:layout_width="@dimen/button_number_width"
        android:layout_height="@dimen/button_number_height"
        android:layout_marginTop="@dimen/margin_top_button"
        android:background="@drawable/number_buttons"
        android:text="@string/_3Button"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/aButton"
        android:onClick="onClickNumber"
        style="@style/ButtonNumberStyle"
        android:layout_width="@dimen/button_number_width"
        android:layout_height="@dimen/button_number_height"
        android:layout_marginTop="@dimen/margin_top_button"
        android:background="@drawable/number_buttons"
        android:text="@string/aButton"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintTop_toTopOf="@+id/button3"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button0"
        android:onClick="onClickNumber"
        style="@style/ButtonNumberStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_number_height"
        android:layout_marginTop="@dimen/margin_top_button"
        android:background="@drawable/number_buttons"
        android:text="@string/_0Button"
        app:layout_constraintEnd_toEndOf="@+id/aButton"
        app:layout_constraintStart_toStartOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintVertical_bias="1.0" />




</androidx.constraintlayout.widget.ConstraintLayout>